Table users {
  id uuid [not null]
  created_at timestamptz [not null]
  name text [not null]

  indexes {
    id [pk]
  }
}

Table teams {
  number smallint [not null]
  verified boolean [not null, default: false]
  created_at timestamptz [not null, default: `now()`]
  name text [not null]
  current_event citext

  indexes {
    number [pk]
    // number::text (gin, pg_trgm)
    // name (gin, pg_trgm)
  }
}
Ref: teams.number > frc_teams.number [delete: restrict]
Ref: teams.current_event > frc_events.key [delete: set null]

Table team_users {
  user_id uuid [not null]
  team_num smallint [not null] // default: get_team_num()
  added_at timestamptz [not null, default: `now()`]
  added_by uuid [default: `auth.uid()`]

  indexes {
    user_id [pk]
    (team_num, user_id) [unique]
    (team_num, added_at)
    added_by
  }
}
Ref: team_users.user_id > users.id [delete: cascade]
Ref: team_users.team_num > teams.number [delete: cascade]
Ref: team_users.added_by > users.id [delete: set null]

Table team_requests {
  user_id uuid [not null, default: `auth.uid()`]
  requested_at timestamptz [not null, default: `now()`]
  team_num smallint [not null]

  indexes {
    user_id [pk]
    (team_num, requested_at)
  }
}
Ref: team_requests.user_id > users.id [delete: cascade]
Ref: team_requests.team_num > teams.number [delete: cascade]

Table permission_types {
  id citext [not null]
  name text [not null]
  description text [not null, default: '']

  indexes {
    id [pk]
  }
}

Table permissions {
  user_id uuid [not null]
  team_num smallint [not null] // default: get_team_num()
  granted_at timestamptz [not null, default: `now()`]
  granted_by uuid [default: `auth.uid()`]
  type citext [not null]

  indexes {
    (user_id, type) [pk]
    (team_num, type)
    (team_num, user_id) // for fk
    (team_num, granted_by) // for fk
  }
}
Ref: permissions.(team_num, user_id) > team_users.(team_num, user_id) [delete: cascade]
Ref: permissions.(team_num, granted_by) > team_users.(team_num, user_id) [delete: cascade]
Ref: permissions.type > permission_types.id [delete: restrict]
